docs/i18n/ko/docusaurus-plugin-content-docs/version-4.2.2/api/SnapControl.mdx
---
custom_edit_url: null
---

```ts
class SnapControl extends Control
```
입력을 중단한 시점의 가속도에 영향받아 도달할 패널을 계산하는 이동 방식을 사용하는 [Control](Control)

<div className="container">
  <div className="row mb-2"><div className="col col--6"><strong>Properties</strong></div><div className="col col--6"><strong>Methods</strong></div></div>
  <div className="row"><div className="col col--6"><a href="#count">count</a><br/><a href="#controller">controller</a><br/><a href="#activeIndex">activeIndex</a><br/><a href="#activePanel">activePanel</a><br/><a href="#animating">animating</a><br/><a href="#holding">holding</a></div><div className="col col--6"><a href="#moveToPosition">moveToPosition</a><br/><a href="#init">init</a><br/><a href="#destroy">destroy</a><br/><a href="#enable">enable</a><br/><a href="#disable">disable</a><br/><a href="#updatePosition">updatePosition</a><br/><a href="#updateInput">updateInput</a><br/><a href="#resetActive">resetActive</a><br/><a href="#moveToPanel">moveToPanel</a></div></div>
</div>

## Constructor
```ts
new SnapControl()
```
|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
||Partial&lt;[SnapControlOptions](SnapControlOptions)&gt;|yes|{}||

## Properties

### count {#count}

<div className="bulma-tags">

</div>

입력 중단 이후 통과하여 이동할 수 있는 패널의 최대 갯수

**Type**: number

**Default**: Infinity

### controller {#controller}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
  <span className="bulma-tag is-danger">inherited</span>
</div>

[@egjs/axes](https://naver#github#io/egjs-axes/)의 이벤트를 처리하는 컨트롤러 컴포넌트

**Type**: [AxesController](AxesController)

### activeIndex {#activeIndex}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
  <span className="bulma-tag is-danger">inherited</span>
</div>

[currentPanel](Flicking#currentPanel)의 인덱스 번호

**Type**: number

**Default**: 0

### activePanel {#activePanel}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
  <span className="bulma-tag is-danger">inherited</span>
</div>

현재 선택된 패널

**Type**: [Panel](Panel) \| null

### animating {#animating}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
  <span className="bulma-tag is-danger">inherited</span>
</div>

현재 애니메이션 동작 여부

**Type**: boolean

### holding {#holding}

<div className="bulma-tags">
  <span className="bulma-tag is-warning">readonly</span>
  <span className="bulma-tag is-danger">inherited</span>
</div>

현재 사용자가 클릭/터치중인지 여부

**Type**: boolean

## Methods

### moveToPosition {#moveToPosition}

<div className="bulma-tags">
  <span className="bulma-tag is-success">async</span>
</div>

[Camera](Camera)를 주어진 좌표로 이동합니다

**Returns**: Promise&lt;void&gt;
- 해당 좌표 도달시에 resolve되는 Promise

**Emits**: [Flicking#event:moveStart](Flicking#event-moveStart), [Flicking#event:move](Flicking#event-move), [Flicking#event:moveEnd](Flicking#event-moveEnd), [Flicking#event:willChange](Flicking#event-willChange), [Flicking#event:changed](Flicking#event-changed), [Flicking#event:willRestore](Flicking#event-willRestore), [Flicking#event:restored](Flicking#event-restored), [Flicking#event:needPanel](Flicking#event-needPanel), [Flicking#event:visibleChange](Flicking#event-visibleChange), [Flicking#event:reachEdge](Flicking#event-reachEdge)

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|position|number|no||이동할 좌표|
|duration|number|no||패널 이동 애니메이션 진행 시간 (단위: ms)|
|axesEvent|object|yes||[Axes](https://naver#github#io/egjs-axes/)의 [release](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#event-release) 이벤트|

**Throws**: [FlickingError](FlickingError)

|code|condition|
|---|---|
|[POSITION_NOT_REACHABLE](ERROR_CODE)|주어진 패널이 제거되었거나, Camera의 [range](Camera#range) 밖에 있을 경우|
|[NOT_ATTACHED_TO_FLICKING](ERROR_CODE)|[init](Control#init)이 이전에 호출되지 않은 경우|
|[ANIMATION_INTERRUPTED](ERROR_CODE)|사용자 입력에 의해 애니메이션이 중단된 경우|
|[STOP_CALLED_BY_USER](ERROR_CODE)|발생된 이벤트들 중 하나라도 `stop()`이 호출된 경우|

### init {#init}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

Control을 초기화합니다

**Returns**: this

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|flicking|[Flicking](Flicking)|no||Flicking의 인스턴스|

### destroy {#destroy}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

Control을 초기 상태로 되돌립니다

**Returns**: void

### enable {#enable}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

사용자의 입력(마우스/터치)를 활성화합니다

**Returns**: this

### disable {#disable}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

사용자의 입력(마우스/터치)를 막습니다

**Returns**: this

### updatePosition {#updatePosition}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
  <span className="bulma-tag is-success">async</span>
</div>

resize 이후에 position을 업데이트합니다

**Returns**: Promise&lt;void&gt;

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|progressInPanel|number|no||Resize 이전 현재 선택된 패널 내에서의 카메라 progress 값|

**Throws**: [FlickingError](FlickingError)

[NOT_ATTACHED_TO_FLICKING](ERROR_CODE) [init](Camera#init)이 이전에 호출되지 않은 경우

### updateInput {#updateInput}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

[controller](Control#controller)의 내부 상태를 갱신합니다

**Returns**: this

### resetActive {#resetActive}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
</div>

[activePanel](Control#activePanel)을 `null`로 초기화합니다

**Returns**: this

### moveToPanel {#moveToPanel}

<div className="bulma-tags">
  <span className="bulma-tag is-danger">inherited</span>
  <span className="bulma-tag is-success">async</span>
</div>

[Camera](Camera)를 해당 패널 위로 이동합니다

**Returns**: Promise&lt;void&gt;
- 해당 패널 도달시에 resolve되는 Promise

**Emits**: [Flicking#event:moveStart](Flicking#event-moveStart), [Flicking#event:move](Flicking#event-move), [Flicking#event:moveEnd](Flicking#event-moveEnd), [Flicking#event:willChange](Flicking#event-willChange), [Flicking#event:changed](Flicking#event-changed), [Flicking#event:willRestore](Flicking#event-willRestore), [Flicking#event:restored](Flicking#event-restored), [Flicking#event:needPanel](Flicking#event-needPanel), [Flicking#event:visibleChange](Flicking#event-visibleChange), [Flicking#event:reachEdge](Flicking#event-reachEdge)

|PARAMETER|TYPE|OPTIONAL|DEFAULT|DESCRIPTION|
|:---:|:---:|:---:|:---:|:---:|
|panel|[Panel](Panel)|no||이동할 패널|
|options|object|no||옵션 오브젝트|
|duration|number|no||애니메이션 진행 시간 (단위: ms)|
|axesEvent|object|yes||[Axes](https://naver#github#io/egjs-axes/)의 [release](https://naver#github#io/egjs-axes/release/latest/doc/eg#Axes#html#event-release) 이벤트|
|direction|[DIRECTION](DIRECTION)|yes|DIRECTION.NONE|이동할 방향. [circular](Flicking#circular) 옵션 활성화시에만 사용 가능합니다|

**Throws**: [FlickingError](FlickingError)

|code|condition|
|---|---|
|[POSITION_NOT_REACHABLE](ERROR_CODE)|주어진 패널이 제거되었거나, Camera의 [range](Camera#range) 밖에 있을 경우|
|[NOT_ATTACHED_TO_FLICKING](ERROR_CODE)|[init](Control#init)이 이전에 호출되지 않은 경우|
|[ANIMATION_INTERRUPTED](ERROR_CODE)|사용자 입력에 의해 애니메이션이 중단된 경우|
|[STOP_CALLED_BY_USER](ERROR_CODE)|발생된 이벤트들 중 하나라도 `stop()`이 호출된 경우|

